2004-07-01  Karl Runge <runge@karlrunge.com>
	* improve scaled grid calculation to prevent drift (which causes
	  drift in pixel weights and poorer tightvnc compression)
	* add ":pad" scale option, detect small fraction scale = m/n.

2004-06-28  Karl Runge <runge@karlrunge.com>
	* round scaled width to multiple of 4 to make vncviewer happy.
	* allow override of above ":n4" and allow 4 point interpolation
	  to be used even with shrinking ":in". 

2004-06-27  Karl Runge <runge@karlrunge.com>
	* speed up scaling a bit for slow machines (still all floating point)
	* add no blending option (-scale fraction:nb)

2004-06-26  Karl Runge <runge@karlrunge.com>
	* add -scale fract for global (not per-client) server-side scaling
	  working more or less OK, needs to be optimized at some point.
	* remove -hints/-nohints options.

2004-06-17  Karl Runge <runge@karlrunge.com>
	* simple ~/.x11vncrc config file support, -rc, -norc

2004-06-12  Karl Runge <runge@karlrunge.com>
	* add -clear_mods -clear_keys for (rare) case where keys are
	  not being released (e.g. Ctrl-C x11vnc thru x11vnc).
	* export RFB_SERVER_IP and RFB_SERVER_PORT to -accept program
	  so that the tcp 4-tuple is completely specified.  
	* add -storepasswd <pass> <file> so storepasswd program not needed

2004-06-05  Karl Runge <runge@karlrunge.com>
	* rearrange file for easier maintenance, indicating file breakup.
	* add RFB_CLIENT_COUNT, number of other connected clients to
	  -accept and -gone commands.

2004-05-27  Karl Runge <runge@karlrunge.com>
	* add view-only passwd via -viewpasswd and 2nd line of -passwdfile

2004-05-21  Karl Runge <runge@karlrunge.com>
	* -accept: add view-only decision and other improvements.
	* add -gone command option for when a client leaves.
	  Thanks to Jesus Alvarez for these ideas.
	* -passwdfile to keep passwd off of cmd line.
	* -o logfile send stderr to a logfile.

2004-05-14  Karl Runge <runge@karlrunge.com>
	* improvements to -accept popup: yes/no buttons and timeout. 