@@ -1,3 +1,7 @@
+2004-07-04  Karl Runge <runge@karlrunge.com>
+	* extend -allow to re-read a file with allowed IP addresses. 
+	* improvements to -help text.
+
 2004-07-01  Karl Runge <runge@karlrunge.com>
 	* improve scaled grid calculation to prevent drift (which causes
 	  drift in pixel weights and poorer tightvnc compression)
